// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Errors component renders correctly 1`] = `
<div
  class="border-0 border-l-4 pl-5 border-red-600 border-solid"
  data-testid="errors"
>
  This contains errors
</div>
`;

exports[`Errors component renders correctly when there are no errors 1`] = `
<div
  class=""
  data-testid="errors"
>
  This contains errors
</div>
`;
